# libpst2

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libpst.pc  libpst.pc.in  libpst.spec  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
html/: Makefile  Makefile.in
man/: Makefile  Makefile.in
python/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  deltasearch  dumpblocks  getidblock  libpst.c  libpst.h  lspst  nick2ldif  pst.c  pst2ldif  pstexport.c  readpst  vbuf.c  vbuf.h
src/.deps/: deltasearch.Po  dumpblocks.Po  getidblock.Po  lspst.Po  nick2ldif.Po  pst2ldif.Po  readpst-msg.Po  readpst-readpst.Po
xml/: Makefile  Makefile.in  libpst
